# rust-rpm

./: Cargo.toml  README.md
examples/: rpminfo.rs
src/: lib.rs
src/internal/: builder.rs  convert.rs  header.rs  index.rs  lead.rs  mod.rs  package.rs  signature.rs
tests/: roundtrip.rs
