[package]
name = "rpmpkg"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "A library for reading/writing RPM package files"
repository = "https://github.com/mdsteele/rust-rpm"
keywords = ["package", "rpm"]
license = "MIT"
readme = "README.md"

[dependencies]
byteorder = "1"
cpio = "0.1"

[dev-dependencies]
clap = "2.30"
